--- a/fast-appi_clases/index.html
+++ b/fast-appi_clases/index.html
@@ -5,7 +5,7 @@
 		<script src="main.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<button class="aid1 getText activ_on">Hello Word</button>			
+		<button class="aid1 getText activ_on">Hello World</button>			
 		<button class="aid2 activ_togg">Button toggle</button>
 		<button class="aid3 ">Este tiene un sub tema</button>
 			<section class="acl1 h_1">
@@ -18,6 +18,7 @@
 				<button class="aid3_1">Sub 1</button>
 				<button class="aid3_2">Sub 2</button>
 					<section class="acl3_1">
+						
 						<p>Este es un sub 1</p>
 					</section>
 					<section class="acl3_2">
