--- a/fast-appi_clases/index.html
+++ b/fast-appi_clases/index.html
@@ -1,13 +1,11 @@
 <html>
 	<head>
-		<script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-		<script src="FST-APP.js" type="text/javascript"></script>
-		<script src="main.js" type="text/javascript"></script>
+		
 	</head>
 	<body>
 		<button class="aid1 getText activ_on">Hello World</button>			
-		<button class="aid2 activ_togg">Button toggle</button>
-		<button class="aid3 ">Este tiene un sub tema</button>
+		<button class="aid2 getText  activ_togg">Button toggle</button>
+		<button class="aid3 getText  ">Este tiene un sub tema</button>
 			<section class="acl1 h_1">
 				<p>Esto es un Tuto</p>
 			</section>
@@ -15,8 +13,8 @@
 				<p>Hola este es otro</p>
 			</div>
 			<article class="acl3">
-				<button class="aid3_1">Sub 1</button>
-				<button class="aid3_2">Sub 2</button>
+				<button class="aid3_1 getText ">Sub 1</button>
+				<button class="aid3_2 getText ">Sub 2</button>
 					<section class="acl3_1">
 						
 						<p>Este es un sub 1</p>
@@ -25,5 +23,12 @@
 						<p>Este es un sub 2</p>
 					</section>					
 			</article>
+			<div class="aid_Index">
+				
+			</div>
+		
 	</body>
+		<script src="jquery-1.11.3.min.js" type="text/javascript"></script>
+		<script src="FST-APP.js" type="text/javascript"></script>
+		<script src="main.js" type="text/javascript"></script>
 </html>
