--- a/example.html
+++ b/example.html
@@ -13,9 +13,9 @@
                 $('#activ').append("<button class='activ"+i+" getText'>Opcion"+i+"</button>");
                 $('#salve').append("<div class='slave"+i+"  h_1'>jsdñklajlkdja</div>");
             }
-            var x=new fast_appi("activ","slave");
+            var x=new fast_appi(".activ",".slave");
             x.run();
-            var api= new fast_appi("aid","acl");
+            var api= new fast_appi(".aid",".acl");
             api.run();
             
             
