--- a/example.html
+++ b/example.html
@@ -22,6 +22,7 @@
             $(".activ"+10+"").addClass("disabled");
             $("#removeClass").click(function(){
                 $(".activ"+10+"").removeClass("disabled");
+                $(this).hide();
             });
             
             
